--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+<script src="https://kit.fontawesome.com/90f25fa8bf.js" crossorigin="anonymous"></script>
 <div class="header">Elliott's app</div>
+<i class="fa-solid fa-heart"></i>
