--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <script src="https://kit.fontawesome.com/90f25fa8bf.js" crossorigin="anonymous"></script>
-<div class="header">Elliott's app</div>
-<i class="fa-solid fa-heart"></i>
+<div class="header">
+<i class="fas fa-bars myIcons"></i>
+<i class="fa-brands fa-twitter"></i>
+<i class="fa-solid fa-ellipsis-vertical"></i>
+</div>
