this time i think i fixed them.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <script src="https://kit.fontawesome.com/90f25fa8bf.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="style.css">
 <div class="header">
-    <i class="fas fa-bars myIcons"></i>  <!-- Existing class for specific styling if needed -->
-    <i class="fa-brands fa-twitter myIcons"></i>  <!-- Added myIcons class -->
-    <i class="fa-solid fa-ellipsis-vertical myIcons"></i>  <!-- Added myIcons class -->
+    <i class="fas fa-bars myIcons"></i>
+    <i class="fa-brands fa-twitter myIcons"></i>
+    <i class="fa-solid fa-ellipsis-vertical myIcons"></i>
 </div>
