made twitter link clickable!

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href="style.css">
 <div class="header">
     <i class="fas fa-bars myIcons"></i>
-    <i class="fa-brands fa-twitter myIcons"></i>
+    <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5Ex&region=follow_link&screen_name=egga22real"> <i class="fa-brands fa-twitter myIcons"></i></a>
     <i class="fa-solid fa-ellipsis-vertical myIcons"></i>
+    
 </div>
 <div class="text">Look up!</div>
 
-https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5Ex&region=follow_link&screen_name=egga22real
