made the link open in new tab.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="style.css">
 <div class="header">
     <i class="fas fa-bars myIcons"></i>
-    <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5Ex&region=follow_link&screen_name=egga22real"> <i class="fa-brands fa-twitter myIcons"></i></a>
+    <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5Ex&region=follow_link&screen_name=egga22real" target="_blank"> <i class="fa-brands fa-twitter myIcons"></i></a>
     <i class="fa-solid fa-ellipsis-vertical myIcons"></i>
     
 </div>
