--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <script src="https://kit.fontawesome.com/90f25fa8bf.js" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="style.css">
 <div class="header">
     <i class="fas fa-bars myIcons"></i>
     <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5Ex&region=follow_link&screen_name=egga22real" target="_blank"> <i class="fa-brands fa-twitter myIcons"></i></a>
+    <a href="https://discord.com/users/895042981214695437" target="_blank"> <i class="fa-brands fa-discord myIcons"></i></a>
     <i class="fa-solid fa-ellipsis-vertical myIcons"></i>
     
 </div>
