--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <a href="https://discord.com/users/895042981214695437" target="_blank"> <i class="fa-brands fa-discord myIcons"></i></a>
     <a href="https://link.chess.com/friend/2uSg1m" target="_blank"><img src="https://i.ibb.co/RS0KRJh/Chess-com-2019-29.webp" alt="Chess.com"></a>
 </div>
-<div class="text">Look up!</div>
+<div class="text">Follow me!</div>
 
