--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div class="header">
     <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5Ex&region=follow_link&screen_name=egga22real" target="_blank"> <i class="fa-brands fa-twitter myIcons"></i></a>
     <a href="https://discord.com/users/895042981214695437" target="_blank"> <i class="fa-brands fa-discord myIcons"></i></a>
-    <a href="https://link.chess.com/friend/2uSg1m" target="_blank"><img src="https://i.ibb.co/RS0KRJh/Chess-com-2019-29.webp" alt="Chess.com"></a>
+    <a href="https://link.chess.com/friend/OeXsbE" target="_blank"><img src="https://i.ibb.co/RS0KRJh/Chess-com-2019-29.webp" alt="Chess.com"></a>
 </div>
 <div class="text">Follow me!</div>
 
